--- a/css/home/introducao.css
+++ b/css/home/introducao.css
@@ -1,9 +1,7 @@
 /* MAIN - INTRODUCAO */
 .introducao-bg {
-  background: #000000;
-  color: #ffffff;
-  box-shadow: inset 0 -120px #ffffff;
-  box-shadow: insert 0 -120px blue;
+  background: var(--cor-12);
+  box-shadow: inset 0 -120px var(--cor-0);
 }
 
 .introducao {
@@ -31,19 +29,14 @@
 
 .introducao h1 {
   margin-bottom: 32px;
-  font-size: 64px;
-  line-height: 1.125;
 }
 
-.introducao h1 span {
-  color: #ffbb00;
+.introducao h1 {
+  margin-bottom: 32px;
 }
 
 .introducao p {
   margin-bottom: 20px;
-  font-size: 24px;
-  line-height: 1.5;
-  color: #b2b2b2;
 }
 
 @media (max-width:1200px) {
@@ -57,9 +50,9 @@
 
 @media (max-width:800px) {
   .introducao-bg {
-    background: #111111;
+    background: var(--cor-11);
     padding-top: 40px;
-    box-shadow: inset 0 -60px #ffffff;
+    box-shadow: inset 0 -60px var(--cor-0);
   }
 
   .introducao {
