--- a/css/bicicletas/bicicletas-lista.css
+++ b/css/bicicletas/bicicletas-lista.css
@@ -1,20 +1,66 @@
 .bicicletas-lista {
   padding: 60px 0px 120px 0px;
+  padding-bottom: 120px;
 }
 
 .bicicletas-lista h2 {
   margin-bottom: 40px;
-  max-width: 1200px;
-  padding-left: 20px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .bicicletas-lista ul {
   display: flex;
   gap: 40px;
-  padding: 0 20px;
+  padding: 0 20px 20px 20px;
   max-width: 1400px;
   margin-left: auto;
   margin-right: auto;
+  overflow-x: auto;
 }
+
+.bicicletas-lista li {
+  flex: 1;
+  min-width: 280px;
+}
+
+.bicicletas-lista a {
+  display: block;
+}
+
+.bicicletas-lista img {
+  margin-bottom: 16px;
+}
+
+.bicicletas-lista h3 {
+  margin-bottom: 8px;
+  display: flex;
+  align-items: center;
+}
+
+.bicicletas-lista h3::before {
+  content: "";
+  display: inline-block;
+  height: 8px;
+  width: 12px;
+  margin-right: 8px;
+  background-color: var(--cor-p1);
+}
+
+.bicicletas-lista a:hover h3::before {
+  width: 24px;
+  transition: width 0.2s;
+}
+
+.bicicletas-lista li span {
+  padding-left: 20px;
+}
+
+
+@media (max-width: 800px){
+  .bicicletas-lista {
+    padding-bottom: 60px;
+  }
+  .bicicletas-lista ul {
+    gap: 20px;
+  }
+}
+
