--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -1,7 +1,16 @@
+.container {
+  box-sizing: border-box;
+  max-width: 1200px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .botao {
   display: inline-block;
   padding: 16px 32px;
-  background: linear-gradient( #ffbf00 , #f2a50c);
+  background: linear-gradient(#ffbf00, #f2a50c);
   border-radius: 4px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   text-transform: uppercase;
@@ -10,10 +19,10 @@
 }
 
 .botao:hover {
-  background: linear-gradient( #ffb60d , #e59317);
+  background: linear-gradient(#ffb60d, #e59317);
 }
 
-@media (max-width:600px) {
+@media (max-width: 600px) {
   .botao {
     padding: 12px 16px;
     font-size: 1rem;
