--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@
 /* Home */
 @import "./home/introducao.css";
 @import "./home/tecnologia.css";
+@import "./home/parceiros.css";
+@import "./home/depoimentos.css";
 
 /* Bicicletas */
 @import "./bicicletas/bicicletas-lista.css";
