--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -16,10 +16,20 @@
   text-transform: uppercase;
   color: var(--cor-p5);
   font: 600 1.125rem/1.35 "Poppins", sans-serif;
+  max-width: max-content;
 }
 
 .botao:hover {
   background: linear-gradient(#ffb60d, #e59317);
+}
+/* Botão secundario Linha-131 */
+.botao.secundario {
+  background: var(--cor-10);
+  color: var(--cor-0);
+}
+
+.botao.secundario:hover {
+  background: var(--cor-9);
 }
 
 @media (max-width: 600px) {
