--- a/css/home/depoimentos.css
+++ b/css/home/depoimentos.css
@@ -12,6 +12,7 @@
 }
 
 .depoimento-conteudo {
+  background: url('../../img/dec/bottom-right-p.svg') no-repeat bottom 40px right 40px ;
   padding: 40px 40px 80px 80px;
   align-self: end;
 }
@@ -40,6 +41,12 @@
 
 .depoimento p::after {
   content: '”';
+}
+
+@media (min-width: 1200px) {
+  .depoimento img {
+    max-height: 520px;
+  }
 }
 
 @media (max-width: 800px) {
